# docker-build

./: .pre-commit-config.yaml  README.rst  SECURITY.rst  setup.cfg  sonar-project.properties
.github/workflows/: codeql-analysis.yml  pre-commit.yml  pypi.yml  pytest.yml  sonarqube.yml
.sonarlint/: connectedMode.json
docker_build/: docker.py  dockerfile.py  exceptions.py  models.py
examples/: example.py
tests/: test_dummy.py  test_temporary.py
