[metadata]
name = Docker build
version = 0.0.1
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Package for creating a lightweight Docker container from another
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/petermcd/docker-build
project_urls =
    Bug Tracker = https://github.com/petermcd/docker-build/issues
    Source = https://github.com/petermcd/docker-build
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.10

[options.extras_require]
test = flake8; isort; mypy;
build = wheel; build;

[flake8]
max_line_length = 120
